--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -1,8 +1,8 @@
 ---
 ---
 
-$logo-big: 80px;
-$logo: 40px;
+$logo-big: 200px;
+$logo: 100px;
 $big-padding: 100px;
 $collapse: 700px;
 $sticky: true;
@@ -43,7 +43,7 @@ header a {
 }
 
 .logo > * {
-  width: 1em;
+  width: unset;
   height: 100%;
 }
 
