--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -48,7 +48,7 @@ header a {
 }
 
 .title-text {
-  display: flex;
+  display: none;
   justify-content: flex-start;
   align-items: baseline;
   flex-wrap: wrap;
